--- a/templates/blog/post_list.html
+++ b/templates/blog/post_list.html
@@ -6,5 +6,6 @@
 </head>
 <body>
   http://beyondtest.skbroadband.com:5001/Report/Share/BeyondTestOTT/24h_dashboardqwewqeqweqweqweqwe
+    branch 변경
 </body>
 </html>
