--- a/templates/blog/post_list.html
+++ b/templates/blog/post_list.html
@@ -2,10 +2,23 @@
 <html lang="ko">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Django Girls blog</title>
 </head>
 <body>
-  http://beyondtest.skbroadband.com:5001/Report/Share/BeyondTestOTT/24h_dashboardqwewqeqweqweqweqwe
-    branch 변경
+     <div>
+        <h1><a href="">Django Girls Blog</a></h1>
+    </div>
+
+    <div>
+        <p>published: 14.06.2014, 12:14</p>
+        <h2><a href="">My first post</a></h2>
+        <p>Aenean eu leo quam. Pellentesque ornare sem lacinia quam venenatis vestibulum. Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
+    </div>
+
+    <div>
+        <p>published: 14.06.2014, 12:14</p>
+        <h2><a href="">My second post</a></h2>
+        <p>Aenean eu leo quam. Pellentesque ornare sem lacinia quam venenatis vestibulum. Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut f.</p>
+    </div>
 </body>
 </html>
